--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -176,6 +176,11 @@ jobs:
           $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "Bicep/ACS/config/podFailure.yaml") | ConvertTo-Json -Compress)
           echo "::set-output name=podFailur::$PsJson"
 
+      # Print json
+      - name: Print Json
+        shell: pwsh
+        run: echo ${{ steps.converter.outputs.podFailur }}
+      
       # Deploy ChaosMeshPodFaultsExperiment
       - name: Deploy Bicep file ChaosMeshPodFaultsExperiment
         id: ChaosMeshPodFaultsExperiment
@@ -207,15 +212,15 @@ jobs:
       #     $EXPERIMENT_NAME = "Experiment1"    
       #     az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
 
-      # Deploy Bicep file Azure Load Testing
-      - name: Deploy Bicep file Azure Load Testing
-        uses: azure/arm-deploy@v1
-        with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-          resourceGroupName: ${{ secrets.AZURE_RG }}
-          template: ./Bicep/ALT/mainALT.bicep
-          parameters: name="${{ env.AZURELOADTESTINGNAME }}" location="northeurope"
-          failOnStdErr: false
+      # # Deploy Bicep file Azure Load Testing
+      # - name: Deploy Bicep file Azure Load Testing
+      #   uses: azure/arm-deploy@v1
+      #   with:
+      #     subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+      #     resourceGroupName: ${{ secrets.AZURE_RG }}
+      #     template: ./Bicep/ALT/mainALT.bicep
+      #     parameters: name="${{ env.AZURELOADTESTINGNAME }}" location="northeurope"
+      #     failOnStdErr: false
 
       # Run Chaos Experiments
       - name: Run Chaos Experiments
@@ -226,18 +231,18 @@ jobs:
           $EXPERIMENT_NAME = "${{ steps.ChaosMeshPodFaultsExperiment.outputs.experimentName }}"    
           az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
 
-      # https://github.com/Azure/load-testing
-      - name: 'Create Azure Load Test'
-        uses: azure/load-testing@v1
-        with:
-          resourceGroup: ${{ secrets.AZURE_RG }}
-          loadTestResource: "${{ env.AZURELOADTESTINGNAME }}"
-          loadTestConfigFile: ./Bicep/ALT/config.yaml
-          env: |
-            [
-                {
-                "name": "webapp",
-                "value": "${{ env.CLUSTERIP }}"
-                }
-            ]
+      # # https://github.com/Azure/load-testing
+      # - name: 'Create Azure Load Test'
+      #   uses: azure/load-testing@v1
+      #   with:
+      #     resourceGroup: ${{ secrets.AZURE_RG }}
+      #     loadTestResource: "${{ env.AZURELOADTESTINGNAME }}"
+      #     loadTestConfigFile: ./Bicep/ALT/config.yaml
+      #     env: |
+      #       [
+      #           {
+      #           "name": "webapp",
+      #           "value": "${{ env.CLUSTERIP }}"
+      #           }
+      #       ]
 
