--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -182,8 +182,7 @@ jobs:
         shell: pwsh
         run: |
           Install-Module powershell-yaml -Force
-          $Content = Get-Content -Raw "Bicep/ACS/config/podFailure.yaml"
-          $PsJson = @(ConvertFrom-Yaml -Yaml $Content | ConvertTo-Json -Compress
+          $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "Bicep/ACS/config/podFailure.yaml") | ConvertTo-Json -Compress)
           echo "::set-output name=podFailur::$PsJson"
 
       # Print json
