--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -183,13 +183,13 @@ jobs:
         run: |
           Install-Module powershell-yaml -Force
           $PsJson = @(ConvertFrom-Yaml -Yaml (Get-Content -Raw "Bicep/ACS/config/podFailure.yaml") | ConvertTo-Json -Compress)
-          echo "::set-output name=podFailur::$PsJson"
+          echo "::set-output name=json::$PsJson"
 
       # Print json
       - name: Print Json
         shell: pwsh
         run: |
-          $PRINT = '${{ steps.converter.outputs.podFailur }}'
+          $PRINT = '${{ steps.converter.outputs.json }}'
           echo $PRINT
       
       # Deploy ChaosMeshPodFaultsExperiment
