--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -192,27 +192,27 @@ jobs:
       #     $PRINT = '${{ steps.converter.outputs.json }}'
       #     echo $PRINT
       
-      # Deploy ChaosMeshPodFaultsExperiment
-      - name: Deploy Bicep file ChaosMeshPodFaultsExperiment
-        id: ChaosMeshPodFaultsExperiment
-        uses: azure/arm-deploy@v1
-        with:
-          subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
-          resourceGroupName: ${{ secrets.AZURE_RG }}
-          template: ./Bicep/ACS/mainACS.bicep
-          parameters: experimentName="ChaosMeshPodFaultsExperiment" aksName="${{ env.KUBERNETESSERVICENAME }}" actionValue="{\"action\":\"pod-failure\",\"mode\":\"all\",\"duration\":\"600s\",\"selector\":{\"namespaces\":[\"default\"]}}" actionName="podChaos"
-          failOnStdErr: false
+      # # Deploy ChaosMeshPodFaultsExperiment
+      # - name: Deploy Bicep file ChaosMeshPodFaultsExperiment
+      #   id: ChaosMeshPodFaultsExperiment
+      #   uses: azure/arm-deploy@v1
+      #   with:
+      #     subscriptionId: ${{ secrets.AZURE_SUBSCRIPTION }}
+      #     resourceGroupName: ${{ secrets.AZURE_RG }}
+      #     template: ./Bicep/ACS/mainACS.bicep
+      #     parameters: experimentName="ChaosMeshPodFaultsExperiment" aksName="${{ env.KUBERNETESSERVICENAME }}" actionValue="{\"action\":\"pod-failure\",\"mode\":\"all\",\"duration\":\"600s\",\"selector\":{\"namespaces\":[\"default\"]}}" actionName="podChaos"
+      #     failOnStdErr: false
       
-      # Give experiment permission to your AKS cluster
-      - name: Give experiment permission to your AKS cluster
-        shell: pwsh
-        run: |
-          $AKS_NAME = "${{ env.KUBERNETESSERVICENAME }}"
-          $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
-          $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
+      # # Give experiment permission to your AKS cluster
+      # - name: Give experiment permission to your AKS cluster
+      #   shell: pwsh
+      #   run: |
+      #     $AKS_NAME = "${{ env.KUBERNETESSERVICENAME }}"
+      #     $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
+      #     $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
           
-          $EXPERIMENT_PRINCIPAL_ID = "${{ steps.ChaosMeshPodFaultsExperiment.outputs.servicePrincipalId }}"
-          az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope "subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME"
+      #     $EXPERIMENT_PRINCIPAL_ID = "${{ steps.ChaosMeshPodFaultsExperiment.outputs.servicePrincipalId }}"
+      #     az role assignment create --role "Azure Kubernetes Service Cluster Admin Role" --assignee-object-id $EXPERIMENT_PRINCIPAL_ID --scope "subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.ContainerService/managedClusters/$AKS_NAME"
       
       # # Run Chaos Experiments
       # - name: Run Chaos Experiments
@@ -233,27 +233,33 @@ jobs:
       #     parameters: name="${{ env.AZURELOADTESTINGNAME }}" location="northeurope"
       #     failOnStdErr: false
 
-      # Run Chaos Experiments
-      - name: Run Chaos Experiments
-        shell: pwsh
-        run: |
-          $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
-          $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
-          $EXPERIMENT_NAME = "${{ steps.ChaosMeshPodFaultsExperiment.outputs.experimentName }}"    
-          az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
+      # # Run Chaos Experiments
+      # - name: Run Chaos Experiments
+      #   shell: pwsh
+      #   run: |
+      #     $RESOURCE_GROUP = "${{ secrets.AZURE_RG }}"
+      #     $SUBSCRIPTION_ID = "${{ secrets.AZURE_SUBSCRIPTION }}"
+      #     $EXPERIMENT_NAME = "${{ steps.ChaosMeshPodFaultsExperiment.outputs.experimentName }}"    
+      #     az rest --method post --uri https://management.azure.com/subscriptions/$SUBSCRIPTION_ID/resourceGroups/$RESOURCE_GROUP/providers/Microsoft.Chaos/experiments/$EXPERIMENT_NAME/start?api-version=2021-09-15-preview
 
-      # # https://github.com/Azure/load-testing
-      # - name: 'Create Azure Load Test'
-      #   uses: azure/load-testing@v1
-      #   with:
-      #     resourceGroup: ${{ secrets.AZURE_RG }}
-      #     loadTestResource: "${{ env.AZURELOADTESTINGNAME }}"
-      #     loadTestConfigFile: ./Bicep/ALT/config.yaml
-      #     env: |
-      #       [
-      #           {
-      #           "name": "webapp",
-      #           "value": "${{ env.CLUSTERIP }}"
-      #           }
-      #       ]
+      # https://github.com/Azure/load-testing
+      - name: 'Create Azure Load Test'
+        uses: azure/load-testing@v1
+        with:
+          resourceGroup: ${{ secrets.AZURE_RG }}
+          loadTestResource: "${{ env.AZURELOADTESTINGNAME }}"
+          loadTestConfigFile: ./Bicep/ALT/config.yaml
+          env: |
+            [
+                {
+                "name": "webapp",
+                "value": "${{ env.CLUSTERIP }}"
+                }
+            ]
+
+      # Deploy Container registry image to Kubernetes service 
+      - name: Deploy and Run Choas Mesh Experiment
+        run: |
+          cd src/chaos-studio/chaos-mesh
+          helm upgrade experiment . --install
 
