--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -110,12 +110,12 @@ jobs:
       #     sleep 15
       #     az aks update -n "${{ env.KUBERNETESSERVICENAME }}" -g "${{ secrets.AZURE_RG }}" --attach-acr "${{ env.CONTAINERREGISTRYNAME }}"
 
-      # # Deploy Container registry image to Kubernetes service 
-      # - name: Deploy Container registry image to Kubernetes service
-      #   run: |
-      #     cd src/helloworld-service/user-service-chart
-      #     helm upgrade ${{ env.APPNAME }} . --install --set image.repository=${{ env.CONTAINERREGISTRYNAME }}.azurecr.io/${{ env.REPOSITORYNAME }} --set image.tag=${{ env.IMAGETAG }} --set app.name=${{ env.APPNAME }} --set image.replicas=${{ env.IMAGEREPLICAS }} --namespace "demo-performance" --create-namespace  
-      #     echo "CLUSTERIP=$(kubectl get service "nginx-ingress-nginx-controller" -n default -o jsonpath="{.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
+      # Deploy Container registry image to Kubernetes service 
+      - name: Deploy Container registry image to Kubernetes service
+        run: |
+          cd src/helloworld-service/user-service-chart
+          helm upgrade ${{ env.APPNAME }} . --install --set image.repository=${{ env.CONTAINERREGISTRYNAME }}.azurecr.io/${{ env.REPOSITORYNAME }} --set image.tag=${{ env.IMAGETAG }} --set app.name=${{ env.APPNAME }} --set image.replicas=${{ env.IMAGEREPLICAS }} --namespace "demo-performance" --create-namespace  
+          echo "CLUSTERIP=$(kubectl get service "nginx-ingress-nginx-controller" -n default -o jsonpath="{.status.loadBalancer.ingress[0].ip}")" >> $GITHUB_ENV
 
       # # Deploy Prometheus service to Kubernetes
       # - name: Deploy Prometheus service to Kubernetes
